--- a/index.html
+++ b/index.html
@@ -3,53 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Portfolio | Earn Online</title>
+    <title>Aamir Ahmad | Digital Marketing & E-commerce Expert</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
-        body { background: #0f0f0f; color: #fff; line-height: 1.6; }
-        .navbar { background: #1a1a1a; padding: 1rem; text-align: center; border-bottom: 2px solid #00d4ff; }
-        .hero { padding: 3rem 1rem; text-align: center; background: #222; border-bottom: 1px solid #333; }
-        .hero h1 { font-size: 2rem; color: #00d4ff; margin-bottom: 10px; }
-        .container { padding: 2rem; max-width: 1000px; margin: auto; }
-        .services { display: flex; flex-direction: column; gap: 1.5rem; margin-top: 2rem; }
-        .card { background: #1a1a1a; padding: 1.5rem; border-radius: 10px; border: 1px solid #333; text-align: center; }
-        .card h3 { color: #00d4ff; margin-bottom: 10px; }
-        .btn { background: #00d4ff; color: #000; padding: 0.8rem 1.5rem; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block; margin-top: 1rem; }
-        .price { color: #00ff00; font-size: 1.2rem; font-weight: bold; display: block; margin: 10px 0; }
-        footer { text-align: center; padding: 2rem; font-size: 0.8rem; opacity: 0.6; }
+        :root { --black: #0a0a0a; --red: #ff0000; --yellow: #ffcc00; --white: #ffffff; }
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+        body { background-color: var(--black); color: var(--white); }
+        
+        /* Header & Logo */
+        header { padding: 20px; border-bottom: 3px solid var(--red); display: flex; justify-content: space-between; align-items: center; background: #111; }
+        .logo { font-size: 24px; font-weight: 800; color: var(--yellow); text-transform: uppercase; letter-spacing: 2px; }
+        .logo span { color: var(--red); }
+
+        /* Hero Section */
+        .hero { text-align: center; padding: 60px 20px; background: linear-gradient(180deg, #111 0%, #000 100%); }
+        .profile-img { width: 180px; height: 180px; border-radius: 50%; border: 5px solid var(--yellow); margin-bottom: 20px; object-fit: cover; box-shadow: 0 0 20px var(--red); }
+        .hero h1 { font-size: 3rem; color: var(--white); margin-bottom: 10px; }
+        .hero h1 span { color: var(--yellow); }
+        .hero p { font-size: 1.2rem; color: #ccc; margin-bottom: 20px; }
+        .badge { background: var(--red); color: white; padding: 5px 15px; border-radius: 20px; font-weight: bold; font-size: 0.9rem; }
+
+        /* Skills Section */
+        .section-title { text-align: center; color: var(--yellow); margin: 40px 0 20px; font-size: 2rem; text-transform: uppercase; }
+        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; padding: 20px; }
+        .skill-card { background: #1a1a1a; padding: 30px; border-radius: 15px; border-left: 5px solid var(--red); transition: 0.3s; }
+        .skill-card:hover { transform: translateY(-10px); background: #222; border-left-color: var(--yellow); }
+        .skill-card h3 { color: var(--yellow); margin-bottom: 10px; }
+
+        /* Experience Section */
+        .experience { background: #111; padding: 40px 20px; border-top: 1px solid #333; }
+        .exp-box { max-width: 800px; margin: auto; border-left: 2px solid var(--yellow); padding-left: 20px; }
+        .exp-item { margin-bottom: 30px; }
+        .exp-item h4 { color: var(--red); font-size: 1.3rem; }
+
+        /* Contact Button */
+        .cta-btn { background: var(--yellow); color: black; padding: 15px 40px; border-radius: 50px; text-decoration: none; font-weight: 800; display: inline-block; margin-top: 30px; transition: 0.3s; text-transform: uppercase; }
+        .cta-btn:hover { background: var(--red); color: white; box-shadow: 0 0 20px var(--red); }
+
+        footer { text-align: center; padding: 40px; border-top: 1px solid #333; font-size: 0.8rem; color: #666; }
     </style>
 </head>
 <body>
 
-    <div class="navbar">
-        <h2>Smart Solutions 💡</h2>
-    </div>
+    <header>
+        <div class="logo">AA<span>EXPERT</span></div>
+        <div class="badge">3+ Years Experience</div>
+    </header>
 
-    <div class="hero">
-        <h1>Digital Services & Store</h1>
-        <p>Expert in Web Development & Online Earning</p>
-        <a href="https://wa.me/923000000000" class="btn">Contact on WhatsApp</a>
-    </div>
+    <section class="hero">
+        <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
+        <h1>I'm <span>Aamir Ahmad</span></h1>
+        <p>Digital Marketing Specialist | Facebook & TikTok Ads Expert | E-commerce Growth Hacker</p>
+        <a href="https://wa.me/923482066656" class="btn cta-btn">Let's Scale Your Business</a>
+    </section>
 
     <div class="container">
-        <div class="services">
-            <div class="card">
-                <h3>Website Creation</h3>
-                <p>Get your personal website live in 10 minutes.</p>
-                <span class="price">$10 / Project</span>
-                <a href="#" class="btn">Order Now</a>
+        <h2 class="section-title">Professional Expertise</h2>
+        <div class="skills-grid">
+            <div class="skill-card">
+                <h3>Facebook Ads Specialist</h3>
+                <p>Advanced pixel tracking, lookalike audiences, and high-conversion ad sets to maximize ROI.</p>
             </div>
-            <div class="card">
-                <h3>Affiliate Deal</h3>
-                <p>Best budget smartphone for coding and work.</p>
-                <span class="price">Check Discount</span>
-                <a href="https://amazon.com" class="btn">Buy on Amazon</a>
+            <div class="skill-card">
+                <h3>TikTok Ads Expert</h3>
+                <p>Creating viral ad campaigns that capture attention and drive massive sales for E-commerce brands.</p>
+            </div>
+            <div class="skill-card">
+                <h3>E-commerce Expert</h3>
+                <p>Complete Shopify & Store management with data-driven strategies for 3-year consistent growth.</p>
+            </div>
+            <div class="skill-card">
+                <h3>Web Development</h3>
+                <p>Building lightning-fast, conversion-optimized landing pages and professional portfolios.</p>
             </div>
         </div>
     </div>
 
+    <section class="experience">
+        <h2 class="section-title">Professional Background</h2>
+        <div class="exp-box">
+            <div class="exp-item">
+                <h4>2023 - Present | Senior Marketing Strategist</h4>
+                <p>Handling large-scale budgets for international clients, delivering 5x-10x ROAS consistently.</p>
+            </div>
+            <div class="exp-item">
+                <h4>2021 - 2023 | E-commerce Manager</h4>
+                <p>Managed end-to-end operations for multiple successful dropshipping and local brand stores.</p>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>© 2026 Developed by Iftaamir | Powered by Netlify</p>
+        <p>Contact: lftaamir8@gmail.com | WhatsApp: +92 348 2066656</p>
+        <p>© 2026 Aamir Ahmad. All Rights Reserved.</p>
     </footer>
 
 </body>
