--- a/index.html
+++ b/index.html
@@ -3,99 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Ahmad | Digital Marketing & E-commerce Expert</title>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <title>Aamir Ahmad | Digital Specialist</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --black: #0a0a0a; --red: #ff0000; --yellow: #ffcc00; --white: #ffffff; }
+        :root { --black: #050505; --red: #ff0000; --yellow: #ffcc00; --white: #ffffff; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
         body { background-color: var(--black); color: var(--white); }
+
+        /* --- New Professional Header --- */
+        header { 
+            padding: 15px 5%; 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            background: #111; 
+            border-bottom: 2px solid var(--red);
+            position: sticky; top: 0; z-index: 1000;
+        }
+        /* Premium Logo Design */
+        .logo { font-size: 22px; font-weight: 900; color: var(--yellow); letter-spacing: 1px; }
+        .logo span { color: var(--red); background: var(--yellow); color: black; padding: 2px 8px; border-radius: 4px; margin-left: 5px; }
         
-        /* Header & Logo */
-        header { padding: 20px; border-bottom: 3px solid var(--red); display: flex; justify-content: space-between; align-items: center; background: #111; }
-        .logo { font-size: 24px; font-weight: 800; color: var(--yellow); text-transform: uppercase; letter-spacing: 2px; }
-        .logo span { color: var(--red); }
+        /* 3 Lines Menu Icon */
+        .menu-btn { color: var(--white); font-size: 24px; cursor: pointer; }
 
-        /* Hero Section */
-        .hero { text-align: center; padding: 60px 20px; background: linear-gradient(180deg, #111 0%, #000 100%); }
-        .profile-img { width: 180px; height: 180px; border-radius: 50%; border: 5px solid var(--yellow); margin-bottom: 20px; object-fit: cover; box-shadow: 0 0 20px var(--red); }
-        .hero h1 { font-size: 3rem; color: var(--white); margin-bottom: 10px; }
+        /* Hero Section (Same as before but refined) */
+        .hero { text-align: center; padding: 70px 20px; background: linear-gradient(180deg, #151515 0%, #050505 100%); }
+        .profile-img { width: 170px; height: 170px; border-radius: 50%; border: 4px solid var(--yellow); margin-bottom: 20px; object-fit: cover; box-shadow: 0 0 20px var(--red); }
+        .hero h1 { font-size: 2.8rem; margin-bottom: 10px; }
         .hero h1 span { color: var(--yellow); }
-        .hero p { font-size: 1.2rem; color: #ccc; margin-bottom: 20px; }
-        .badge { background: var(--red); color: white; padding: 5px 15px; border-radius: 20px; font-weight: bold; font-size: 0.9rem; }
+        .hero p { color: #ccc; margin-bottom: 25px; font-size: 1.1rem; }
 
-        /* Skills Section */
-        .section-title { text-align: center; color: var(--yellow); margin: 40px 0 20px; font-size: 2rem; text-transform: uppercase; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; padding: 20px; }
-        .skill-card { background: #1a1a1a; padding: 30px; border-radius: 15px; border-left: 5px solid var(--red); transition: 0.3s; }
-        .skill-card:hover { transform: translateY(-10px); background: #222; border-left-color: var(--yellow); }
-        .skill-card h3 { color: var(--yellow); margin-bottom: 10px; }
+        /* Skills (3 saal ka experience) */
+        .skills-section { padding: 50px 5%; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
+        .card { background: #111; padding: 30px; border-radius: 12px; border-left: 5px solid var(--red); transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); border-left-color: var(--yellow); }
+        .card i { font-size: 35px; color: var(--yellow); margin-bottom: 15px; }
+        .card h3 { margin-bottom: 10px; color: var(--white); }
 
-        /* Experience Section */
-        .experience { background: #111; padding: 40px 20px; border-top: 1px solid #333; }
-        .exp-box { max-width: 800px; margin: auto; border-left: 2px solid var(--yellow); padding-left: 20px; }
-        .exp-item { margin-bottom: 30px; }
-        .exp-item h4 { color: var(--red); font-size: 1.3rem; }
+        /* --- New Professional Footer --- */
+        footer { background: #000; padding: 40px 5% 20px; border-top: 3px solid var(--red); margin-top: 50px; }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin-bottom: 30px; }
+        .footer-box h4 { color: var(--yellow); margin-bottom: 15px; font-size: 1.2rem; }
+        .footer-box p, .footer-box a { color: #999; text-decoration: none; font-size: 0.9rem; display: block; margin-bottom: 10px; }
+        .footer-box a:hover { color: var(--red); }
+        .socials { display: flex; gap: 15px; margin-top: 10px; }
+        .socials a { font-size: 22px; color: var(--white); }
+        .copyright { text-align: center; border-top: 1px solid #222; padding-top: 20px; color: #555; font-size: 0.8rem; }
 
-        /* Contact Button */
-        .cta-btn { background: var(--yellow); color: black; padding: 15px 40px; border-radius: 50px; text-decoration: none; font-weight: 800; display: inline-block; margin-top: 30px; transition: 0.3s; text-transform: uppercase; }
-        .cta-btn:hover { background: var(--red); color: white; box-shadow: 0 0 20px var(--red); }
-
-        footer { text-align: center; padding: 40px; border-top: 1px solid #333; font-size: 0.8rem; color: #666; }
+        .cta-btn { background: var(--yellow); color: black; padding: 15px 35px; border-radius: 50px; text-decoration: none; font-weight: 800; display: inline-block; transition: 0.3s; }
+        .cta-btn:hover { background: var(--red); color: white; box-shadow: 0 0 15px var(--red); }
     </style>
 </head>
 <body>
 
     <header>
-        <div class="logo">AA<span>EXPERT</span></div>
-        <div class="badge">3+ Years Experience</div>
-    </header>
+        <div class="logo">AAMIR<span>PRO</span></div>
+        <div class="menu-btn"><i class="fas fa-bars"></i></div> </header>
 
     <section class="hero">
         <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
         <h1>I'm <span>Aamir Ahmad</span></h1>
-        <p>Digital Marketing Specialist | Facebook & TikTok Ads Expert | E-commerce Growth Hacker</p>
-        <a href="https://wa.me/923482066656" class="btn cta-btn">Let's Scale Your Business</a>
+        <p>Digital Marketing Expert | 3 Years of Experience in Facebook & TikTok Ads</p>
+        <a href="https://wa.me/923482066656" class="cta-btn">GET IN TOUCH</a>
     </section>
 
-    <div class="container">
-        <h2 class="section-title">Professional Expertise</h2>
-        <div class="skills-grid">
-            <div class="skill-card">
-                <h3>Facebook Ads Specialist</h3>
-                <p>Advanced pixel tracking, lookalike audiences, and high-conversion ad sets to maximize ROI.</p>
+    <section class="skills-section">
+        <div class="grid">
+            <div class="card">
+                <i class="fab fa-facebook"></i>
+                <h3>Facebook Ads</h3>
+                <p>Scaling e-commerce brands with 3 years of proven data-driven strategies.</p>
             </div>
-            <div class="skill-card">
-                <h3>TikTok Ads Expert</h3>
-                <p>Creating viral ad campaigns that capture attention and drive massive sales for E-commerce brands.</p>
+            <div class="card">
+                <i class="fab fa-tiktok"></i>
+                <h3>TikTok Marketing</h3>
+                <p>Capturing the Gen-Z market with viral ad creatives and high ROAS.</p>
             </div>
-            <div class="skill-card">
-                <h3>E-commerce Expert</h3>
-                <p>Complete Shopify & Store management with data-driven strategies for 3-year consistent growth.</p>
-            </div>
-            <div class="skill-card">
-                <h3>Web Development</h3>
-                <p>Building lightning-fast, conversion-optimized landing pages and professional portfolios.</p>
-            </div>
-        </div>
-    </div>
-
-    <section class="experience">
-        <h2 class="section-title">Professional Background</h2>
-        <div class="exp-box">
-            <div class="exp-item">
-                <h4>2023 - Present | Senior Marketing Strategist</h4>
-                <p>Handling large-scale budgets for international clients, delivering 5x-10x ROAS consistently.</p>
-            </div>
-            <div class="exp-item">
-                <h4>2021 - 2023 | E-commerce Manager</h4>
-                <p>Managed end-to-end operations for multiple successful dropshipping and local brand stores.</p>
+            <div class="card">
+                <i class="fas fa-chart-line"></i>
+                <h3>E-commerce Growth</h3>
+                <p>Complete Shopify store management and business scaling solutions.</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>Contact: lftaamir8@gmail.com | WhatsApp: +92 348 2066656</p>
-        <p>© 2026 Aamir Ahmad. All Rights Reserved.</p>
+        <div class="footer-grid">
+            <div class="footer-box">
+                <h4>About Me</h4>
+                <p>Professional Digital Marketer specializing in paid advertising and brand growth for the last 3 years.</p>
+            </div>
+            <div class="footer-box">
+                <h4>Contact</h4>
+                <a href="mailto:lftaamir8@gmail.com">lftaamir8@gmail.com</a>
+                <p>WhatsApp: +92 348 2066656</p>
+            </div>
+            <div class="footer-box">
+                <h4>Social Presence</h4>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://wa.me/923482066656"><i class="fab fa-whatsapp"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            © 2026 Aamir Ahmad | All Rights Reserved.
+        </div>
     </footer>
 
 </body>
