--- a/index.html
+++ b/index.html
@@ -3,64 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Pro | Digital Expert</title>
+    <title>Aamir Pro | Digital Agency</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --bg: #121212; --card: #1c1c1c; --red: #ff3131; --yellow: #ffbd14; --white: #ffffff; }
+        :root { --bg: #0d0d0d; --card-bg: #1a1a1a; --red: #ff3131; --yellow: #ffbd14; --text-gray: #b0b0b0; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-        body { background-color: var(--bg); color: var(--white); }
+        body { background-color: var(--bg); color: #fff; }
 
-        /* --- Exact Header from Image --- */
+        /* --- Custom Header with Image Style --- */
         header { 
-            padding: 20px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
+            padding: 25px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
             border-bottom: 2px solid var(--red); position: relative;
         }
-        header::after { content: ''; position: absolute; bottom: -2px; right: 0; width: 30%; height: 2px; background: var(--yellow); }
-        .logo { font-size: 22px; font-weight: 800; letter-spacing: 1px; }
+        header::after { content: ''; position: absolute; bottom: -2px; right: 0; width: 35%; height: 2px; background: var(--yellow); }
+        .logo { font-size: 24px; font-weight: 800; }
         .logo span { color: var(--red); }
-        .nav-meta { display: flex; gap: 15px; font-size: 13px; color: #888; align-items: center; }
+        .nav-meta { display: flex; gap: 15px; font-size: 13px; color: #666; align-items: center; }
 
-        /* --- Hero Section --- */
-        .hero { display: flex; align-items: center; padding: 60px 5%; gap: 40px; flex-wrap: wrap; }
-        .profile-border { 
-            width: 180px; height: 180px; border-radius: 50%; padding: 8px;
+        /* --- Hero Section Adjustment --- */
+        .hero { display: flex; align-items: center; padding: 80px 5%; gap: 50px; flex-wrap: wrap; }
+        .profile-box { 
+            width: 190px; height: 190px; border-radius: 50%; padding: 7px;
             background: linear-gradient(135deg, var(--yellow), var(--red));
-            box-shadow: 0 0 20px rgba(255, 49, 49, 0.4);
+            box-shadow: 0 0 30px rgba(255, 49, 49, 0.4);
         }
-        .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 4px solid #000; }
-        .hero-text h2 { font-size: 1.2rem; font-weight: 400; }
-        .hero-text h1 { font-size: 2.8rem; margin: 5px 0; }
-        .hero-text h1 span { color: var(--yellow); }
-        .hero-text p { color: #888; max-width: 400px; margin-bottom: 25px; font-size: 0.9rem; }
-        .btn-touch { background: var(--yellow); color: black; padding: 12px 25px; border-radius: 20px; text-decoration: none; font-weight: bold; font-size: 0.9rem; }
+        .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 5px solid #000; }
+        .hero-info h2 { font-size: 24px; font-weight: 300; }
+        .hero-info h1 { font-size: 3.5rem; font-weight: 800; margin: 5px 0; }
+        .hero-info h1 span { color: var(--yellow); }
+        .hero-info p { color: var(--text-gray); max-width: 450px; margin-bottom: 30px; line-height: 1.6; }
+        .btn-touch { background: var(--yellow); color: #000; padding: 14px 35px; border-radius: 30px; text-decoration: none; font-weight: 800; font-size: 15px; }
 
-        /* --- Large Up-to-Down Skills --- */
-        .section-label { padding: 40px 5% 20px; font-size: 1.3rem; font-weight: 700; }
-        .skill-list { padding: 0 5%; display: flex; flex-direction: column; gap: 20px; }
-        .skill-card { 
-            background: var(--card); border-radius: 15px; display: flex; align-items: center; 
-            padding: 35px; text-decoration: none; color: white; border-left: 10px solid var(--red);
-            transition: 0.3s;
+        /* --- Large Vertical Skills Sections --- */
+        .label { padding: 40px 5% 20px; font-size: 22px; font-weight: 700; color: #fff; }
+        .skills-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 25px; }
+        .skill-tile { 
+            background: var(--card-bg); border-radius: 15px; display: flex; align-items: center; 
+            padding: 40px; text-decoration: none; color: white; border-left: 12px solid var(--red);
+            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
-        .skill-card:hover { transform: translateY(-3px); background: #222; }
-        .skill-icon { width: 60px; height: 60px; background: #000; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; color: var(--yellow); margin-right: 20px; }
-        .skill-info h3 { font-size: 1.4rem; margin-bottom: 5px; }
-        .skill-info p { color: #888; font-size: 0.85rem; }
+        .skill-tile:hover { transform: scale(1.03); background: #222; border-left-color: var(--yellow); }
+        .icon-wrap { width: 70px; height: 70px; background: #000; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; color: var(--yellow); margin-right: 30px; }
+        .skill-tile h3 { font-size: 24px; margin-bottom: 8px; }
+        .skill-tile p { color: var(--text-gray); font-size: 15px; }
 
-        /* --- Side-by-Side Footer (Fixed Layout) --- */
-        .footer-grid { 
+        /* --- Footer Side-by-Side Tiles --- */
+        .footer-tiles { 
             display: grid; grid-template-columns: repeat(3, 1fr); 
-            gap: 15px; padding: 40px 5%; background: #000; margin-top: 50px;
+            gap: 20px; padding: 50px 5%; background: #000; margin-top: 60px;
         }
-        .footer-tile { background: #161616; padding: 25px; border-radius: 12px; }
-        .footer-tile h4 { color: var(--yellow); margin-bottom: 15px; font-size: 0.9rem; text-transform: uppercase; }
-        .footer-tile p, .footer-tile a { color: #888; font-size: 0.8rem; text-decoration: none; display: block; margin-bottom: 8px; }
-        .social-icons { display: flex; gap: 10px; margin-top: 15px; }
-        .social-icons i { font-size: 16px; color: white; background: #333; padding: 10px; border-radius: 50%; }
+        .f-card { background: #141414; padding: 30px; border-radius: 15px; border-bottom: 4px solid transparent; }
+        .f-card:hover { border-bottom-color: var(--red); }
+        .f-card h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
+        .f-card p, .f-card a { color: var(--text-gray); font-size: 14px; text-decoration: none; display: block; margin-bottom: 12px; }
+        .f-socials { display: flex; gap: 12px; margin-top: 20px; }
+        .f-socials i { font-size: 18px; color: #fff; background: #2a2a2a; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 50%; }
 
-        @media (max-width: 768px) {
-            .hero { text-align: center; flex-direction: column; }
-            .footer-grid { grid-template-columns: 1fr; }
+        @media (max-width: 850px) {
+            .hero { text-align: center; justify-content: center; }
+            .footer-tiles { grid-template-columns: 1fr; }
         }
     </style>
 </head>
@@ -72,10 +73,10 @@
     </header>
 
     <section class="hero">
-        <div class="profile-border">
+        <div class="profile-box">
             <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
         </div>
-        <div class="hero-text">
+        <div class="hero-info">
             <h2>I'm</h2>
             <h1>Aamir <span>Ahmad</span></h1>
             <p>Digital Marketing Expert | 3 Years of Experience in Facebook & TikTok Ads</p>
@@ -83,39 +84,39 @@
         </div>
     </section>
 
-    <div class="section-label">Skills-section</div>
-    <div class="skill-list">
-        <a href="facebook.html" class="skill-card">
-            <div class="skill-icon"><i class="fab fa-facebook-f"></i></div>
-            <div class="skill-info">
+    <div class="label">Skills-section</div>
+    <div class="skills-stack">
+        <a href="facebook.html" class="skill-tile">
+            <div class="icon-wrap"><i class="fab fa-facebook-f"></i></div>
+            <div class="info">
                 <h3>Facebook Ads Specialist</h3>
-                <p>Scaling e-commerce brands with 3 years of data-driven strategies. Click to read more.</p>
+                <p>Scaling e-commerce brands with 3 years of data-driven strategies. (Click to view full info)</p>
             </div>
         </a>
 
-        <a href="tiktok.html" class="skill-card">
-            <div class="skill-icon"><i class="fab fa-tiktok"></i></div>
-            <div class="skill-info">
+        <a href="tiktok.html" class="skill-tile">
+            <div class="icon-wrap"><i class="fab fa-tiktok"></i></div>
+            <div class="info">
                 <h3>TikTok Marketing Expert</h3>
-                <p>Viral product hunting and high ROAS management. Click to read more.</p>
+                <p>Capturing trends with viral creatives and high ROAS management. (Click to view full info)</p>
             </div>
         </a>
     </div>
 
-    <div class="section-label">Footer grid</div>
-    <div class="footer-grid">
-        <div class="footer-tile">
+    <div class="label">Footer grid</div>
+    <div class="footer-tiles">
+        <div class="f-card">
             <h4>About Me</h4>
-            <p>Digital Marketer specializing in paid advertising for local and international brands for 3 years.</p>
+            <p>Professional Digital Marketer specializing in paid advertising for the past 3 years.</p>
         </div>
-        <div class="footer-tile">
-            <h4>Contact</h4>
+        <div class="f-card">
+            <h4>Contact Details</h4>
             <a href="mailto:lftaamir8@gmail.com">lftaamir8@gmail.com</a>
             <p>WhatsApp: +92 348 2066656</p>
         </div>
-        <div class="footer-tile">
-            <h4>Social Presence</h4>
-            <div class="social-icons">
+        <div class="f-card">
+            <h4>Social Channels</h4>
+            <div class="f-socials">
                 <i class="fab fa-linkedin-in"></i>
                 <i class="fab fa-instagram"></i>
                 <i class="fab fa-whatsapp"></i>
