--- a/index.html
+++ b/index.html
@@ -3,98 +3,64 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aamir | Performance Marketing Specialist</title>
+<title>Aamir | Performance Marketing Expert</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<!-- Floating WhatsApp -->
 <a href="https://wa.me/923482066656" class="whatsapp-float" target="_blank">💬</a>
 
-<header>
-<nav>
-<h2 class="logo">Aamir</h2>
-<div>
-<a href="cv.pdf" class="btn" download>Download CV</a>
-<a href="#contact" class="btn">Hire Me</a>
+<header class="hero">
+<div class="hero-text">
+<h1>Scaling Brands <span>With Paid Ads</span></h1>
+<p>Facebook • TikTok • Google Ads Specialist</p>
+<div class="buttons">
+<a href="#contact" class="btn-primary">Hire Me</a>
+<a href="cv.pdf" class="btn-secondary" download>Download CV</a>
 </div>
-</nav>
+</div>
 
-<div class="hero">
-<img src="profile.png" class="profile">
-<h1>Scaling E-commerce Brands With Paid Ads</h1>
-<p>Facebook | TikTok | Google Ads Expert</p>
+<div class="hero-image">
+<img src="profile.png">
 </div>
 </header>
 
-<section class="stats">
-<div class="stat">
-<h2 class="counter" data-target="100">0</h2>
-<p>Campaigns Planned</p>
-</div>
-
-<div class="stat">
-<h2 class="counter" data-target="50">0</h2>
-<p>Funnels Designed</p>
-</div>
-
-<div class="stat">
-<h2 class="counter" data-target="4">0</h2>
-<p>Ad Platforms Mastered</p>
-</div>
-</section>
-
-<section>
-<h2>About Me</h2>
-<p>I specialize in performance marketing for e-commerce brands. My focus is on strategic campaign setup, creative testing, pixel tracking and data-driven scaling systems.</p>
-</section>
-
-<section>
+<section class="skills-section">
 <h2>My Expertise</h2>
 
-<div class="accordion">
-<div class="accordion-item">
-<button class="accordion-btn">Facebook & Instagram Ads</button>
-<div class="accordion-content">
-<p>Full campaign structure setup, CBO strategy, pixel integration, retargeting flows and scaling systems.</p>
-</div>
+<div class="skill-card">
+<h3>Facebook & Instagram Ads</h3>
+<p>Full campaign setup, CBO scaling, pixel integration & retargeting systems.</p>
 </div>
 
-<div class="accordion-item">
-<button class="accordion-btn">TikTok Ads</button>
-<div class="accordion-content">
-<p>Creative testing frameworks, audience targeting strategies and conversion optimization.</p>
-</div>
+<div class="skill-card">
+<h3>TikTok Ads</h3>
+<p>Creative testing strategy, audience research & scaling framework.</p>
 </div>
 
-<div class="accordion-item">
-<button class="accordion-btn">Google Ads</button>
-<div class="accordion-content">
-<p>Search, Display & Performance Max campaigns with keyword and conversion tracking optimization.</p>
-</div>
+<div class="skill-card">
+<h3>Google Ads</h3>
+<p>Search, Display & Performance Max campaigns with conversion tracking.</p>
 </div>
 
-<div class="accordion-item">
-<button class="accordion-btn">E-commerce Growth Strategy</button>
-<div class="accordion-content">
-<p>Shopify setup, funnel building, product testing and ROAS scaling systems.</p>
-</div>
-</div>
+<div class="skill-card">
+<h3>E-commerce Strategy</h3>
+<p>Shopify funnel building, product testing & ROAS improvement systems.</p>
 </div>
 
 </section>
 
-<section id="contact">
-<h2>Contact Me</h2>
+<section id="contact" class="contact">
+<h2>Let’s Work Together</h2>
 <p>Email: <a href="mailto:lftaamir8@gmail.com">lftaamir8@gmail.com</a></p>
-<p>Phone: 03482066656</p>
-<a href="https://wa.me/923482066656" target="_blank" class="btn">Chat on WhatsApp</a>
+<p>WhatsApp: 03482066656</p>
+<a href="https://wa.me/923482066656" class="btn-primary" target="_blank">Chat on WhatsApp</a>
 </section>
 
 <footer>
 <p>© 2026 Aamir | All Rights Reserved</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
